# plastimatch

./: .gitlab-ci.yml  CMakeLists.txt
.github/workflows/: build.yml  main.yml
SuperBuild/: External_DCMTK.cmake
Testing/: CMakeLists.txt
cmake/: FindCUDA_wrap.cmake  HandleITK.cmake  PlmMacros.cmake  nvcc-check.cmake
doc/: NOTES.TXT  STYLE_GUIDE_1.TXT  STYLE_GUIDE_3.TXT  SUPPORTED_PLATFORMS.TXT
doc/man/: drr.1  fdk.1  landmark_warp.1  plastimatch.1
doc/sphinx/: batch_registration.rst  building_plastimatch.rst  command_line_reference.rst  conf.py  debian_packaging.rst  fdk_tutorial_i.rst  fdk_tutorial_ii.rst  image_registration_guidebook.rst  index.rst  plastimatch.rst  user_guide.rst  windows_packaging.rst
examples/csharp/: CMakeLists.txt  csharp-example.cs
extra/matlab/: make_fake_4d.m  make_fake_vxp.m
extra/perl/: change_orientation.pl
extra/python/: waveform.py
libs/demons_itk_insight/: itkESMDemonsRegistrationWithMaskFunction.h  itkESMDemonsRegistrationWithMaskFunction.txx
libs/demons_itk_insight/LOGDomainDemons/: itkVelocityFieldLieBracketFilter.h  itkVelocityFieldLieBracketFilter.txx
libs/devillard/: wirth.cpp
libs/dlib-19.1/dlib/matrix/: matrix.h
libs/dlib-19.1/dlib/smart_pointers/: shared_ptr.h  shared_ptr_thread_safe.h
libs/dlib-19.1/dlib/test/: smart_pointers.cpp
libs/ransac/: RANSAC.h  RANSAC.txx
src/: CHANGELOG.TXT  CMakeLists.txt  Doxyfile
src/base/: CMakeLists.txt  dcmtk_image.cxx  dcmtk_module.cxx  dcmtk_module.h  dcmtk_rt_study_p.h  dcmtk_rtdose.cxx  dcmtk_rtplan.cxx  dcmtk_rtss.cxx  dcmtk_series.cxx  dcmtk_sro.cxx  direction_cosines.h  itk_image.h  plm_image.i  plm_image_header.cxx  plm_image_header.h  plmbase_config.h  proj_volume.cxx  rpl_volume.cxx  rtplan.cxx  rtss.cxx  rtss.h  rtss_roi.cxx  rtss_roi.h  segmentation.cxx  volume.h  volume_conv.h  xform_legacy.cxx  xio_dose.cxx  xio_structures.cxx
src/cli/: CMakeLists.txt  pcmd_fdk.cxx  pcmd_xf_convert.cxx
src/clp/: CMakeLists.txt  plm_clp.cxx  plm_clp.h
src/csharp/: CMakeLists.txt  csharp-example.cs
src/cuda/: CMakeLists.txt  cuda_kernel_util.cu  cuda_kernel_util.h  cuda_texture.cu  cuda_texture.h  cuda_util.cu  cuda_util.h  plmcuda_config.h
src/dose/: CMakeLists.txt  plan_calc.cxx  rt_mebs.cxx  rt_spot_map.h  wed_parms.cxx
src/mondoshot/: mondoshot_main.cpp  mondoshot_main.h
src/plastimatch/: CHANGELOG.TXT  CMakeLists.txt
src/plastimatch/base/: bspline_xform.cxx  bspline_xform.h  dcmtk_image.cxx  dcmtk_module.cxx  dcmtk_rt_study.cxx  dcmtk_rtdose.cxx  dcmtk_rtplan.cxx  dcmtk_rtss.cxx  dcmtk_series.h  direction_cosines.h  interpolate.cxx  interpolate.h  itk_direction_type.h  parameter_parser.cxx  parameter_parser.h  rasterizer.cxx  ray_trace_uniform.cxx  rpl_volume.cxx  rt_study_metadata.cxx  rt_study_metadata.h  rtplan.h  segmentation.cxx  volume.cxx  volume.h  volume_header.cxx  xform.cxx  xio_structures.cxx
src/plastimatch/cli/: pcmd_dvh.cxx  pcmd_warp.cxx  pcmd_warp_dij.cxx  pcmd_warp_dij.h
src/plastimatch/dose/: rt_dij.cxx  rt_mebs.cxx  rt_parms.cxx  rt_plan.cxx  wed_parms.cxx
src/plastimatch/reconstruct/cuda/: CMakeLists.txt
src/plastimatch/register/: bspline.cxx  bspline_mse.cxx  bspline_mse.h  itk_optimizer.cxx  itk_registration_private.h  metric_parms.h  registration.cxx  registration_data.cxx  registration_data.h  registration_parms.cxx  registration_parms.h  registration_similarity_data.h
src/plastimatch/register/cuda/: CMakeLists.txt
src/plastimatch/segment/: autolabel_parms.cxx  autolabel_parms.h  mabs_parms.cxx
src/plastimatch/standalone/: beamdata_gen_gui.cpp  gamma_gui.cpp
src/plastimatch/sys/: cuda_delayload.cxx  cuda_delayload.h  shared_library.h  string_util.cxx  string_util.h
src/plastimatch/test/: CMakeLists.txt  itk_registration_v4.cxx  shared_library_test.cxx
src/plastimatch/util/: CMakeLists.txt  dvh.cxx  dvh.h  gamma_dose_comparison.h  geometry_chooser.h  rt_study_warp.cxx
src/qt/: CMakeLists.txt
src/reconstruct/: CMakeLists.txt  drr.cxx  fdk.cxx
src/reconstruct/cuda/: CMakeLists.txt  drr_cuda.cu  drr_cuda_p.h  fdk_cuda.cu  fdk_cuda_p.h
src/register/: CMakeLists.txt  bspline_mi.cxx  bspline_mse.cxx  bspline_state.cxx  demons.cxx  demons_cpu.cxx  demons_state.h  itk_registration.cxx  itk_tps.h  registration_parms.cxx
src/register/cuda/: CMakeLists.txt  demons_cuda.cu
src/segment/: CMakeLists.txt
src/standalone/: CMakeLists.txt
src/sys/: CMakeLists.txt  plm_config.h.in  plm_int.h  smart_pointer.h
src/test/: CMakeLists.txt  nlopt_test.c
src/util/: CMakeLists.txt  distance_map.cxx  dvh.cxx  dvh.h  dvh_p.h  gamma_dose_comparison.cxx  gamma_dose_comparison.i  geometry_chooser.cxx  itk_crop.cxx  plmutil_config.h  rt_study_warp.h
src/util/cuda/: CMakeLists.txt
